--- a/k8s/beszel/agent.yaml
+++ b/k8s/beszel/agent.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: DaemonSet
 metadata:
   name: beszel-agent
-  namespace: default
+  namespace: beszel
 spec:
   selector:
     matchLabels:
@@ -13,15 +13,20 @@ spec:
         app: beszel-agent
     spec:
       hostNetwork: true
+      dnsPolicy: ClusterFirstWithHostNet    
       containers:
         - name: beszel-agent
-          image: henrygd/beszel-agent:0.11.1          
+          image: henrygd/beszel-agent:0.12.0-beta2
           imagePullPolicy: IfNotPresent
           env:
             - name: LISTEN
-              value: '45876'
-            - name: KEY
-              value: '?'
+              value: "45876"
+            - name: TOKEN
+              value: "?"
+            - name: KEY            
+              value: "?"
+            - name: HUB_URL
+              value: "http://hub.beszel.svc.cluster.local:8090"
           ports:
             - containerPort: 45876
               name: http
